# Openclaw-scribe

./: Cargo.toml  Dockerfile.sandbox  HEARTBEAT.md  MEMORY.md  README.md  SOUL.md  USER.md  config.toml  nvidia-nim-compatibility.md  zeroclaw-evaluation.md
.cargo/: config.toml
cross/aarch64-sysroot/include/: assert.h  errno.h  features-time64.h  stdc-predef.h  stdlib.h
cross/aarch64-sysroot/include/bits/: libc-header-start.h  types.h  wordsize.h
skills-examples/git-commit/: SKILL.md  run.sh  skill.toml
skills-examples/word-count/: SKILL.md  run.sh  skill.toml
skills/power-mgmt/: SKILL.md  power_save  power_status  power_wake  skill.toml
src/: lib.rs  main.rs  tools.rs
src/memory/: agent.rs  agent_tools.rs  composio.rs  context.rs  context_meter.rs  failover.rs  file_tools.rs  heartbeat.rs  markdown.rs  markdown_tools.rs  memory_growth.rs  mod.rs  provider_tools.rs  recursion_guard.rs  sandbox.rs  semantic_search.rs  session.rs  session_tools.rs  silent.rs  skills.rs  skills_tools.rs  startup.rs  structured_log.rs  subagent.rs  telegram.rs  telegram_rich.rs  web_tools.rs
zeroclaw-patches/: markdown-memory-integration.patch  session-persistence.patch  telegram-bot-integration.patch  tool-use-wiring.patch  web-search-tools.patch
