[package]
name = "openclaw-scribe"
version = "0.1.0"
edition = "2021"
description = "Markdown memory, session persistence, and extensions for ZeroClaw"

[lib]
name = "openclaw_scribe"
path = "src/lib.rs"

[[bin]]
name = "zeroclaw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
